--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,6 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"deepak-chic_AssetTracking" /o:"deepak-chic" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet restore ../AssetTrackingService.sln
-          dotnet build ../AssetTrackingService.sln --configuration Release
+          dotnet restore ./AssetTrackingService.sln
+          dotnet build ./AssetTrackingService.sln --configuration Release
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
