--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"deepak-chic_AssetTracking" /o:"deepak-chic" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"deepak-chic_AssetTracking" /o:"deepak-chic" /d:sonar.token="de2ac55711f143108e45a833c8f0488a88c57827" /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore ./AssetTrackingService.sln
           dotnet build ./AssetTrackingService.sln --configuration Release
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="de2ac55711f143108e45a833c8f0488a88c57827"
