--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
   inputs:
     command: 'test'
     projects: '$(sourceDirectory)/AssetTracking.Test/*.csproj'
-    arguments: '--configuration Release --logger trx --results-directory "$(sourceDirectory)/TestResults/Coverage/"'
+    arguments: '--configuration Release --logger trx --results-directory "$(sourceDirectory)/TestResults/Coverage/" --collect "XPlat Code Coverage"'
     testRunTitle: 'Run Unit Test Cases'
     publishTestResults: false
   displayName: 'Running Unit Test Cases'
@@ -53,6 +53,24 @@ steps:
     searchFolder: '$(sourceDirectory)/TestResults/Coverage/'
     mergeTestResults: true
     failTaskOnFailedTests: true
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet Tool Install "reportgenerator"'
+  inputs:
+    command: custom
+    custom: tool
+    arguments: 'install -g dotnet-reportgenerator-globaltool'
+
+- task: PowerShell@2
+  displayName: 'Create Code Coverage Report'
+  inputs:
+    targetType: 'inline'
+    script: reportgenerator -reports:$(Build.SourcesDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:HtmlInline_AzurePipelines
+
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish Code Coverage Report'
+  inputs:
+    codeCoverageTool: 'cobertura'
+    summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
 - task: SonarCloudAnalyze@1
   inputs:
     jdkversion: 'JAVA_HOME_17_X64'
