--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,6 +79,17 @@ steps:
   inputs:
     pollingTimeoutSec: '300'
   displayName: 'Collect Analysis Result'
+- task: NuGetCommand@2
+  inputs:
+    command: 'pack'
+    packagesToPack: '$(sourceDirectory)/AssetTrackingService/*.csproj'
+    versioningScheme: 'off'
+- task: NuGetCommand@2
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '61240ea4-781b-4d13-89a6-a5bb2cdc4d9e/76d15bfc-dd4e-4a8e-9c8b-8987932dc847'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
